gcc/testsuite/gdc.test/compilable/imports/pkgmod313/package.d
module imports.pkgmod313;

public import imports.pkgmod313.mod;

void foo() {}
